<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Inventory</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_item_view">ItemViewActivity</string>

    <string name="button_submit">Submit</string>
    <string name="button_new_user">Not already signed up? Sign up now</string>
    <string name="button_continue_anon">Continue anonymously</string>
    <string name="button_continue_to_app">Continue to app</string>
    <string name="button_logout">Logout</string>
    <string name="button_forgot_password">Forgot your password?</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_add_item">Add Item</string>
    <string name="button_quantity_add_1">Add 1</string>
    <string name="button_quantity_subtract_1">Subtract 1</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>

    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_email">Email address</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_category">Category</string>
    <string name="hint_quantity">Quantity</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="favorite">Favorite</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>

    <string name="instructions_add_item">Enter the name, description, quantity, and category for the new item</string>

    <string-array name="drawer_items">
        <item>View Inventory</item>
        <item>Add Item</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="dialog_delete">Are you sure you want to delete</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
