<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_gravity="center"
              tools:context="com.example.br161.personalinventory.AddItemFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        style="@style/title"
        android:text="@string/instructions_add_item"/>

    <EditText
        android:id="@+id/et_name"
        style="@style/edit_text"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hint_name"/>

    <EditText
        android:id="@+id/et_category"
        style="@style/edit_text"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hint_category"/>

    <EditText
        android:id="@+id/et_quantity"
        style="@style/edit_text"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hint_quantity"
        android:inputType="number"/>

    <EditText
        android:id="@+id/et_description"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hint_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_button_cancel"
            style="@style/button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/button_cancel"/>

        <TextView
            android:id="@+id/tv_button_submit"
            style="@style/button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/button_submit"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>