<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/item_headings"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_header_name"
                style="@style/item_headings"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <ImageView
                android:id="@+id/iv_name_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_down_black_18dp"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            style="@style/item_headings"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_header_quantity"
                style="@style/item_headings"
                android:layout_height="wrap_content"
                android:text="@string/quantity"/>

            <ImageView
                android:id="@+id/iv_quantity_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_down_black_18dp"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            style="@style/item_headings"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_header_category"
                style="@style/item_headings"
                android:layout_height="wrap_content"
                android:text="@string/category"/>

            <ImageView
                android:id="@+id/iv_category_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_down_black_18dp"
                android:visibility="invisible"/>

        </LinearLayout>

        <TextView
            style="@style/item_headings"
            android:layout_height="wrap_content"
            android:text="@string/favorite"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>


</LinearLayout>